--- a/src/app/projects/projects.json
+++ b/src/app/projects/projects.json
@@ -3,13 +3,13 @@
     {
       "date": "2024-03-01",
       "title": "Aivicall",
-      "description": "A ai integrated video calling app.",
+      "description": "It is an AI-driven video conferencing web application built with Node.js, React, WebRTC, WebSockets, and Express. It features JWT-based authentication, real-time peer-to-peer communication, and AI-enhanced collaboration, increasing user engagement by 40%.",
       "url": "https://aivicall.vercel.app/"
     },
     {
       "date": "2023-08-22",
       "title": "E-commerce Dashboard",
-      "description": "A full stack application built using Next.js with React Server Components and Tailwind CSS With Backend in Nodejs.",
+      "description": "Ecommerce is a full-stack MERN application utilizing React, Node.js, Express, MongoDB, and Google OAuth 2.0. It implements RESTful APIs, secure authentication, role-based access control (RBAC), and an optimized NoSQL schema for high scalability.",
       "url": "https://frontend-portfolio-aryan.vercel.app"
     },
     {
@@ -21,7 +21,7 @@
     {
       "date": "2025-01-11",
       "title": "AI Pdf Analyzer",
-      "description": "AI Pdf analyzer and answering bot that uses semantic search and generative AI to give correct answers to questions asked in natural language.",
+      "description": "AiPDF_Analyzer is a FastAPI-based document processing tool using Langchain, FAISS, PostgreSQL, and HuggingFace Transformers. It enables vector-based semantic search, embeddings-based retrieval, and asynchronous API handling, improving large file query speed by 15%.",
       "url": "https://github.com/AryanSwaroop/AiPdf_Analyzer"
     },
     {
@@ -33,8 +33,14 @@
     {
       "date": "2025-01-10",
       "title": "AutoCret",
-      "description": "Python package build to help create content with just a single prompt. You don't need to edit anything just give prompt and video based content will be ready for you.",
+      "description": "AutoCret is a Python-based automation package leveraging Selenium, MoviePy, REST APIs, and multithreading to dynamically generate and curate multimedia content. It enables automated web scraping, data extraction, and content transformation, improving workflow efficiency.",
       "url": "https://github.com/AryanSwaroop/AutoCret"
+    },
+    {
+      "date":"2023-08-22",
+      "title": "E-cell Website",
+      "description": "E-cell Website is a high-performance Next.js application for DTU’s entrepreneurship cell. It implements SSR (Server-Side Rendering), ISR (Incremental Static Regeneration), optimized caching, and handles 4,000+ peak concurrent users efficiently.",
+      "url": "https://www.ecelldtu.in/"
     }
   ]
 }
