--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eneaxharja.com",
+  "name": "https://aryanswaroop.vercel.app",
   "private": true,
   "scripts": {
     "dev": "next dev",
